export const snapshot = {};

snapshot[`Project List Command - Help Text 1`] = `
stdout:
"
Usage: list

Description:

  List projects

Options:

  -h, --help             - Show this help.               
  --team       <team>    - Filter by team key            
  --all-teams            - Show projects from all teams  
  --status     <status>  - Filter by status name         
  -w, --web              - Open in web browser           
  -a, --app              - Open in Linear.app            
  -j, --json             - Output as JSON                

"
stderr:
""
`;

snapshot[`Project List Command - No Projects Found 1`] = `
stdout:
"No projects found.
"
stderr:
""
`;

snapshot[`Project List Command - No Projects Found JSON 1`] = `
stdout:
'{
  "nodes": [],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Project List Command - With JSON Output 1`] = `
stdout:
'{
  "nodes": [
    {
      "id": "project-json-1",
      "name": "JSON Test Project",
      "description": "A project for JSON output",
      "slugId": "json-proj",
      "icon": null,
      "color": "#3b82f6",
      "status": {
        "id": "status-1",
        "name": "In Progress",
        "color": "#f59e0b",
        "type": "started"
      },
      "lead": {
        "name": "test.user",
        "displayName": "Test User",
        "initials": "TU"
      },
      "priority": 2,
      "health": "onTrack",
      "startDate": "2024-01-15",
      "targetDate": "2024-03-30",
      "startedAt": "2024-01-16T09:00:00Z",
      "completedAt": null,
      "canceledAt": null,
      "createdAt": "2024-01-10T10:00:00Z",
      "updatedAt": "2024-01-20T15:30:00Z",
      "url": "https://linear.app/test/project/json-proj",
      "teams": {
        "nodes": [
          {
            "key": "ENG"
          }
        ]
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Project List Command - JSON Output With Pagination 1`] = `
stdout:
'{
  "nodes": [
    {
      "id": "project-page1-1",
      "name": "Alpha Project",
      "description": "First page project",
      "slugId": "alpha-proj",
      "icon": null,
      "color": "#3b82f6",
      "status": {
        "id": "status-1",
        "name": "In Progress",
        "color": "#f59e0b",
        "type": "started"
      },
      "lead": null,
      "priority": 2,
      "health": "onTrack",
      "startDate": null,
      "targetDate": null,
      "startedAt": null,
      "completedAt": null,
      "canceledAt": null,
      "createdAt": "2024-01-10T10:00:00Z",
      "updatedAt": "2024-01-20T15:30:00Z",
      "url": "https://linear.app/test/project/alpha-proj",
      "teams": {
        "nodes": [
          {
            "key": "ENG"
          }
        ]
      }
    },
    {
      "id": "project-page2-1",
      "name": "Beta Project",
      "description": "Second page project",
      "slugId": "beta-proj",
      "icon": null,
      "color": "#10b981",
      "status": {
        "id": "status-2",
        "name": "Planned",
        "color": "#6366f1",
        "type": "planned"
      },
      "lead": {
        "name": "pat.planner",
        "displayName": "Pat Planner",
        "initials": "PP"
      },
      "priority": 3,
      "health": null,
      "startDate": null,
      "targetDate": null,
      "startedAt": null,
      "completedAt": null,
      "canceledAt": null,
      "createdAt": "2024-01-11T10:00:00Z",
      "updatedAt": "2024-01-21T15:30:00Z",
      "url": "https://linear.app/test/project/beta-proj",
      "teams": {
        "nodes": [
          {
            "key": "OPS"
          }
        ]
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;
